# MerakiToFortigateExtractor

./: .gitignore  LICENSE  pyproject.toml  requirements.txt  vlans.py
input/: .gitignore  general_settings_template.toml  myorg_settings_template.toml  settings.toml
mytools/: README.md  fileops.py  merakiops.py
output/configs/: 1NL-33-TSOB.cfg  1QU_08-26165_DCFS-Orem.cfg  Jesse-Lab.cfg  orem-08z-dps-dld_uhp.cfg  orem-0ey-dabs-store17.cfg  slck-01p-dhhs-cannon.cfg  slkc-0fy-tax-taxmain.cfg
src/: vlans.py
src/meraki_converter/: main.py  vlans.py
src/meraki_converter/common/: fileops.py  merakiops.py
src/meraki_converter/mytools/: fileops.py  merakiops.py
src/mytools/: fileops.py  tag.py
templates/: base.conf  bgp.conf  community_list.conf  dhcp.conf  global.conf  interfaces.conf  ipsec.conf  prefix_lists.conf  route_map.conf  sdwan.conf  static.conf  users.conf
tests/: test_options.py  test_vlans.py
